Warning note added to gradle.properties.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
 version=1.1.23-SNAPSHOT
 
+# ********* NOTE DEVELOPERS SHOULD CHANGE THIS VALUES IN THEIR USER SPECIFIC GRADLE PROPERTIES ************
+# ********* THIS IS TO AVOID ACCIDENTAL COMMITS                                                ************
 # Single service deploy can be achieved by setting the properties below to a specific version
 # The osUpgradeXX tasks work by only deploying versions that are different to what is currently deployed
 # oc describe pod <pod_name>.  As an example if the current deployed version is 1.1.23-RELEASE
