Selectively picked parallelisation-mechanism-only changes from feature/parallelisation-investigation-async-with-threadlocals-and-queue-second-page-and-partial-future-wait

--- a/ifs-data-layer/ifs-data-service/src/main/resources/application.properties
+++ b/ifs-data-layer/ifs-data-service/src/main/resources/application.properties
@@ -5,6 +5,12 @@ logging.level.root=WARN
 logging.level.org.innovateuk.ifs=INFO
 logging.level.org.springframework=WARN
 
+# Uncomment the block below to enable detailed SQL logging
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
 flyway.enabled=true
 flyway.placeholderPrefix='_${'
 flyway.placeholderSuffix='}'
@@ -28,7 +34,6 @@ spring.datasource.username=${ifsDatasourceUsername}
 spring.datasource.password=${ifsDatasourcePassword}
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.show-sql=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddlauto=validate
 
@@ -123,7 +128,8 @@ ifs.spend.profile.generation.strategy=ByProjectFinanceCostCategorySummaryStrateg
 ifs.data.survey.diversity.url=https://www.surveymonkey.co.uk/r/ifsaccount
 
 spring.zipkin.baseUrl = http://zipkin:9411
-spring.sleuth.enabled = true
+spring.sleuth.enabled=${zipkinEnabled}
+spring.zipkin.enabled=${zipkinEnabled}
 spring.sleuth.sampler.percentage = 1.0
 logging.level.org.springframework.web.servlet.DispatcherServlet=${zipkinLogTraceLevel}
 server.tomcat.accept-count=700
