--- a/ifs-web-service/ifs-web-core/src/main/resources/application.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/application.properties
@@ -4,6 +4,7 @@
 logging.level.root=WARN
 logging.level.org.innovateuk.ifs=WARN
 logging.level.org.springframework=WARN
+logging.level.org.innovateuk.ifs.util.ThymeleafUtil=WARN
 
 server.session.cookie.secure=true
 server.session.cookie.http-only=false
@@ -73,7 +74,7 @@ spring.devtools.livereload.enabled=false
 
 
 spring.zipkin.baseUrl = http://zipkin:9411
-spring.sleuth.enabled = true
+spring.sleuth.enabled=${zipkinEnabled}
+spring.zipkin.enabled=${zipkinEnabled}
 spring.sleuth.sampler.percentage = 1.0
 logging.level.org.springframework.web.servlet.DispatcherServlet=${zipkinLogTraceLevel}
-
