--- a/zipkin-support.gradle
+++ b/zipkin-support.gradle
@@ -5,19 +5,7 @@ if(zipkinEnabled) {
         apply plugin: 'io.spring.dependency-management'
 
         ext {
-            springCloudVersion = 'Dalston.RELEASE'
-            zipkinLogTraceLevel = 'DEBUG'
-        }
-
-        dependencies {
-            compile "org.springframework.cloud:spring-cloud-starter-sleuth"
-            compile "org.springframework.cloud:spring-cloud-sleuth-zipkin"
-        }
-
-        dependencyManagement {
-            imports {
-                mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-            }
+            zipkinLogTraceLevel = 'WARN'
         }
     }
 } else  {
