--- a/docker-compose-zipkin.yml
+++ b/docker-compose-zipkin.yml
@@ -29,6 +29,10 @@ services:
     links:
       - zipkin
 
+  finance-totals-data-service:
+    links:
+      - zipkin
+
   zipkin:
     hostname: zipkin
     image: openzipkin/zipkin
