--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -71,6 +71,14 @@ services:
     environment:
       - JAVA_OPTS=-Xmx300m -Xdebug -Xrunjdwp:server=y,transport=dt_socket,address=8000,suspend=n
 
+  finance-totals-data-service:
+    hostname: finance-totals-data-service
+    ports:
+      - "8092:8080"
+      - "9012:8000"
+    environment:
+      - JAVA_OPTS=-Xmx300m -Xdebug -Xrunjdwp:server=y,transport=dt_socket,address=8000,suspend=n
+
   sil-stub:
       hostname: sil-stub
       links:
