--- a/ifs-data-layer/docker/Dockerfile-template
+++ b/ifs-data-layer/docker/Dockerfile-template
@@ -15,6 +15,6 @@ VOLUME /tmp
 ADD newrelic.jar /
 ADD newrelic.yml /
 ADD coscale-monitoring.sh /root/coscale-monitoring.sh
-ADD ifs-data-service-@version@-autostart.jar app.jar
+ADD @app_name@-@version@-autostart.jar app.jar
 
 ENTRYPOINT exec java -Dfile.encoding=UTF8 $JAVA_OPTS $JMX_OPTS -jar app.jar
