--- a/docker/ifs-mysql/build.gradle
+++ b/docker/ifs-mysql/build.gradle
@@ -22,7 +22,7 @@ task osStageRemote(type: DockerPushImage) {
     onlyIf { !isNamedEnv() }
 
     dependsOn tagDocker
-    registryCredentials = project.ext.dockerRegistryCredentials
+    registryCredentials=getRemoteOCCredentials()
     imageName = project.dockerRegistry + "/" + openshiftEnv + "/ifs-mysql"
     tag = sqlVersion
 }
