--- a/ifs-registration-service/build.gradle
+++ b/ifs-registration-service/build.gradle
@@ -119,7 +119,7 @@ task tagDocker(type: DockerTagImage) {
 
 task osStageRemote(type: DockerPushImage) {
     dependsOn tagDocker
-    registryCredentials = project.ext.dockerRegistryCredentials
+    registryCredentials=getRemoteOCCredentials()
     imageName = project.dockerRegistry + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
     tag = project.version
 }
