--- a/ifs-registration-service/build.gradle
+++ b/ifs-registration-service/build.gradle
@@ -127,15 +127,19 @@ task osStageRemote(type: DockerPushImage) {
 task tagDockerLocal(type: DockerTagImage) {
     dependsOn buildDocker
     imageId = buildDocker.getTag()
-    repository = localDockerRegistryCredentials.url + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
-    tag = project.version
+    doFirst {
+        repository = getLocalOCCredentials().url + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
+        tag = project.version
+    }
 }
 
 task osStageLocal(type: DockerPushImage) {
     dependsOn tagDockerLocal
-    registryCredentials = project.ext.localDockerRegistryCredentials
-    imageName = localDockerRegistryCredentials.url + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
-    tag = project.version
+    doFirst {
+        registryCredentials = getLocalOCCredentials()
+        imageName = registryCredentials.url + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
+        tag = project.version
+    }
 }
 
 project.version = registrationServiceVersion
