--- a/ifs-auth-service/build.gradle
+++ b/ifs-auth-service/build.gradle
@@ -29,14 +29,19 @@ subprojects {
     task tagDockerLocal(type: DockerTagImage) {
         dependsOn buildDocker
         imageId = buildDocker.getTag()
-        repository = localDockerRegistryCredentials.url + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
+        doFirst {
+            repository = getLocalOCCredentials().url + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
+        }
         tag = project.version
     }
 
     task osStageLocal(type: DockerPushImage) {
         dependsOn tagDockerLocal
-        registryCredentials = project.ext.localDockerRegistryCredentials
-        imageName = localDockerRegistryCredentials.url + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
+        doFirst {
+            registryCredentials = getLocalOCCredentials()
+            imageName = registryCredentials.url + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
+        }
+
         tag = project.version
     }
 }
