--- a/ifs-data-layer/build.gradle
+++ b/ifs-data-layer/build.gradle
@@ -97,15 +97,19 @@ subprojects {
         task tagDockerLocal(type: DockerTagImage) {
             dependsOn buildDocker
             imageId = buildDocker.getTag()
-            repository = localDockerRegistryCredentials.url+"/"+openshiftEnv+"/"+project.name.replaceAll(/ifs-/,"")
-            tag = project.version
+            doFirst {
+                repository = getLocalOCCredentials().url + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
+                tag = project.version
+            }
         }
 
         task osStageLocal(type: DockerPushImage) {
             dependsOn tagDockerLocal
-            registryCredentials = project.ext.localDockerRegistryCredentials
-            imageName=localDockerRegistryCredentials.url +"/"+openshiftEnv+"/"+project.name.replaceAll(/ifs-/,"")
-            tag = project.version
+            doFirst {
+                registryCredentials = getLocalOCCredentials()
+                imageName = registryCredentials.url + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
+                tag = project.version
+            }
         }
 
         // Workaround for https://github.com/spring-projects/spring-boot/issues/8308
