--- a/ifs-auth-service/build.gradle
+++ b/ifs-auth-service/build.gradle
@@ -86,11 +86,11 @@ def String ldapEncryptionCertificateFileName = 'ldap-encryption.crt'
 def String ldapEncryptionCertificateFile = "${buildDir}/${ldapEncryptionCertificateFileName}"
 
 task prepareIDPProxySecrets {
+
     if (!file("${idpCertsVolume}/${idpProxyKeyFileName}").exists() ||
             !file("${idpCertsVolume}/${idpProxyCertificateFileName}").exists() ||
             !file("${idpCertsVolume}/${idpProxyCacertificateFileName}").exists()) {
         buildDir.mkdir()
-
         // a valid CA certificate is required for the data service to work
         assert project.hasProperty('idp.proxy.key')
         new File(idpProxyKeyFile).write(project['idp.proxy.key'])
@@ -219,13 +219,19 @@ task prepareSecrets {
     // on top of their respective certificates SP and IDP need each other's
     // and the IDP needs ldap's
     copy {
-        from file(spProxyCertificateFile)
-        from file(ldapEncryptionCertificateFile)
+        // Copy from the spCertsVolume and ldapCertsVolume as these files should always present at this point where as
+        // the relevant buildDir may well not contain them if a clean has been performed.
+        // Additionally it allows us to drop know cert files into the spCertsVolume and ldapCertsVolume for named builds
+        from file(spCertsVolume + "/" + spProxyCertificateFileName)
+        from file(ldapCertsVolume + "/" + ldapEncryptionCertificateFileName)
         into idpCertsVolume
     }
     copy {
-        from file(idpSigningCertificateFile)
-        from file(idpEncryptionCertificateFile)
+        // Copy from the idpCertsVolume as these files should always present at this point whereas the relevant
+        // buildDir may well not contain them if a clean has been performed.
+        // Additionally it allows us to drop know cert files into the idpCertsVolume for named builds
+        from file(idpCertsVolume + "/" + idpSigningCertificateFileName)
+        from file(idpCertsVolume + "/" + idpEncryptionCertificateFileName)
         into spCertsVolume
     }
 }
