--- a/ifs-data-layer/ifs-finance-totals-data-service/automated-build.gradle
+++ b/ifs-data-layer/ifs-finance-totals-data-service/automated-build.gradle
@@ -1,9 +1,5 @@
-//ext.idpRestBaseURL=""
-//
-//ext.ifsDataServiceRestBaseURL="http://localhost:8080"
-//
-//ext.ifsWebBaseURL="http://localhost:8080"
-//
-//ext.serverPort=""
-//ext.activeProfile="environment"
-//ext.shibbolethDir=""
+ext.ifsDataServiceRestBaseURL="http://localhost:8080"
+ext.ifsWebBaseURL="http://localhost:8080"
+
+ext.serverPort=""
+ext.activeProfile="environment"
