--- a/ifs-data-layer/ifs-finance-data-service/src/main/resources/application.properties
+++ b/ifs-data-layer/ifs-finance-data-service/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.profiles.active=${activeProfile}
 
 ifs.data.service.rest.baseURL=http://data-service:8080
 
-spring.application.name=IFS Finance Totals Data Service
+spring.application.name=IFS Finance Data Service
 
 ifs.web.system.user.uid=${ifsWebSystemUserId}
 ifs.web.baseURL=${ifsWebBaseURL}
