--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -71,8 +71,8 @@ services:
     environment:
       - JAVA_OPTS=-Xmx300m -Xdebug -Xrunjdwp:server=y,transport=dt_socket,address=8000,suspend=n
 
-  finance-totals-data-service:
-    hostname: finance-totals-data-service
+  finance-data-service:
+    hostname: finance-data-service
     ports:
       - "8092:8080"
       - "9012:8000"
