--- a/ifs-data-layer/ifs-finance-data-service/src/main/resources/application-local.properties
+++ b/ifs-data-layer/ifs-finance-data-service/src/main/resources/application-local.properties
@@ -9,7 +9,7 @@ ifs.data.service.rest.baseURL=${ifsDataServiceRestBaseURL}
 
 spring.devtools.remote.secret=supersecretremotekey
 spring.boot.admin.url=http://admin:8123
-spring.boot.admin.client.service-url=http://finance-totals-data-service:8080
+spring.boot.admin.client.service-url=http://finance-data-service:8080
 
 info.version=${project.version}
 
