IFS-2327 - slight amendments / cleanup before raising PR

--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -348,8 +348,8 @@ registration.INVALID_PASSWORD=Password is too weak.
 registration.EMAIL_MUST_BE_VALID=Email must be valid.
 DUPLICATE_EMAIL_ADDRESS=This email address is already taken.
 
-UNSUPPORTED_MEDIA_TYPE=Please upload a file in .pdf format only.
-UNSUPPORTED_MEDIA_TYPE_PDF_ONLY=Please upload a PDF file only.
+UNSUPPORTED_MEDIA_TYPE=Please upload a file in PDF format only.
+UNSUPPORTED_MEDIA_TYPE_PDF_ONLY=Please upload a file in PDF format only.
 UNSUPPORTED_MEDIA_TYPE_SPREADSHEET_ONLY=Please upload a file in spreadsheet format only.
 UNSUPPORTED_MEDIA_TYPE_PDF_AND_SPREADSHEET_ONLY=Please upload a file in PDF or spreadsheet format only.
 PAYLOAD_TOO_LARGE=Please upload a file less than 1mb in size.
