--- a/ifs-data-layer/data-service-commons/build.gradle
+++ b/ifs-data-layer/data-service-commons/build.gradle
@@ -58,6 +58,9 @@ sourceSets {
     }
 }
 
+task resetDB() {
+}
+
 task generateMainMapperClasses(type: JavaCompile) {
     ext.aptDumpDir = file( "build/tmp/apt/mapstruct" )
     destinationDir = aptDumpDir
