--- a/ifs-data-layer/ifs-data-service/docker-build.gradle
+++ b/ifs-data-layer/ifs-data-service/docker-build.gradle
@@ -14,7 +14,11 @@ project.ext['flyway.password']="password"
 project.ext['flyway.placeholderPrefix']='_${'
 project.ext['flyway.placeholderSuffix']='}'
 
-project.ext['flyway.locations']="db/migration,db/setup,db/webtest"
+def flywayPatchesPath = "filesystem:" + project.buildDir.path + "/resources/main/db"
+project.ext['flyway.locations']=flywayPatchesPath + "/migration," +
+                                flywayPatchesPath + "/setup," +
+                                flywayPatchesPath + "/webtest"
+
 ext.ifsFlywayLocations="db/migration,db/setup,db/webtest"
 
 ext.silRestBaseURL="http://sil-stub:8080/silstub"
