IFS-2493 - Now just using initDB again instead of extra resetDB task

--- a/ifs-data-layer/ifs-data-service/build.gradle
+++ b/ifs-data-layer/ifs-data-service/build.gradle
@@ -228,7 +228,7 @@ task generateMainMapperClasses(type: JavaCompile) {
     }
 }
 
-task resetDB() {
+task initDB() {
     flywayMigrate.mustRunAfter flywayClean
 
     dependsOn flywayClean
