IFS-2493 - Adding flyway settings to automated-build.gradle in attempt to fix bamboo build

--- a/ifs-data-layer/ifs-finance-data-service/automated-build.gradle
+++ b/ifs-data-layer/ifs-finance-data-service/automated-build.gradle
@@ -3,3 +3,10 @@ ext.ifsWebBaseURL="http://localhost:8080"
 
 ext.serverPort=""
 ext.activeProfile="environment"
+
+project.ext['flyway.url']='jdbc:mysql://127.0.0.1:3306?characterEncoding=utf8'
+project.ext['flyway.schemas']='ifs_finance'
+project.ext['flyway.user']="ifs"
+project.ext['flyway.password']="ifs"
+project.ext['flyway.placeholderPrefix']='_${'
+project.ext['flyway.placeholderSuffix']='}'
