IFS-2493 - Flyway migrations now executed during spring boot startup

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -73,6 +73,8 @@ services:
 
   finance-data-service:
     hostname: finance-data-service
+    links:
+      - mysql:ifs-database
     ports:
       - "8092:8080"
       - "9012:8000"
