--- a/ifs-data-layer/ifs-finance-data-service/docker-build.gradle
+++ b/ifs-data-layer/ifs-finance-data-service/docker-build.gradle
@@ -4,6 +4,12 @@ ext.ifsWebBaseURL="https://ifs.local-dev"
 ext.serverPort=8080
 ext.activeProfile="local"
 
+ext.ifsDatasourceHost = "ifs-database"
+ext.ifsDatasourceUrl="jdbc:mysql://ifs-database:3306/ifs_finance"
+ext.ifsDatasourceUsername="root"
+ext.ifsDatasourcePassword="password"
+ext.ifsFlywayLocations="db/migration"
+
 project.ext['flyway.url']='jdbc:mysql://ifs-database:3306?characterEncoding=utf8'
 project.ext['flyway.schemas']='ifs_finance'
 project.ext['flyway.user']='root'
