--- a/ifs-data-layer/ifs-finance-data-service/src/main/resources/application.properties
+++ b/ifs-data-layer/ifs-finance-data-service/src/main/resources/application.properties
@@ -5,6 +5,14 @@ logging.level.root=WARN
 logging.level.org.innovateuk.ifs=INFO
 logging.level.org.springframework=WARN
 
+flyway.enabled=true
+flyway.placeholderPrefix='_${'
+flyway.placeholderSuffix='}'
+flyway.url=${ifsDatasourceUrl}
+flyway.user=${ifsDatasourceUsername}
+flyway.password=${ifsDatasourcePassword}
+flyway.locations=${ifsFlywayLocations}
+
 server.session.cookie.secure=true
 server.session.cookie.http-only=false
 
@@ -14,6 +22,10 @@ server.tomcat.accesslog.enabled=true
 server.tomcat.accesslog.pattern=%h %v %D %T %B %l %u %t "%r" %s %b
 
 server.connection-timeout=600000
+
+spring.datasource.url=${ifsDatasourceUrl}
+spring.datasource.username=${ifsDatasourceUsername}
+spring.datasource.password=${ifsDatasourcePassword}
 
 spring.profiles.active=${activeProfile}
 
