IFS-2419 Adding repeatable script for setting uuid in environment specific settings.

--- a/ifs-web-service/ifs-web-core/src/main/resources/application.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/application.properties
@@ -39,7 +39,7 @@ ifs.web.ajp.connections.max.threads=1000
 
 ifs.data.service.rest.baseURL=${ifsDataServiceRestBaseURL}
 
-ifs.web.system.user.uid=${ifsWebSystemUserUid}
+ifs.web.system.user.uid=${ifsSystemUserUUID}
 
 ifs.web.googleanalytics.trackingid=${ifsWebGoogleanalyticsTrackingid}
 
