--- a/ifs-data-layer/ifs-data-service/docker-build.gradle
+++ b/ifs-data-layer/ifs-data-service/docker-build.gradle
@@ -15,6 +15,9 @@ project.ext['flyway.placeholderPrefix']='_${'
 project.ext['flyway.placeholderSuffix']='}'
 
 project.ext['flyway.locations']="db/migration,db/setup,db/webtest"
+
+project.ext['flyway.placeholders.ifs.system.user.uuid']='c0d02979-e66e-11e7-ac43-0242ac120002'
+
 ext.ifsFlywayLocations="db/migration,db/setup,db/webtest"
 
 ext.silRestBaseURL="http://sil-stub:8080/silstub"
