--- a/jmeter/Representative/openshift-local.properties
+++ b/jmeter/Representative/openshift-local.properties
@@ -1,5 +1,5 @@
-server_url=dw-parallel.apps.ifs-local
-authorisation_url=dw-parallel.apps.ifs-local
+server_url=ifs.local-dev
+authorisation_url=ifs.local-dev
 users_csv=user_data.csv
 competitions_csv=competition_data.csv
 invites_csv=invite_data.csv
