IFS-2419 Added missing property from application properties

--- a/ifs-data-layer/ifs-data-service/src/main/resources/application.properties
+++ b/ifs-data-layer/ifs-data-service/src/main/resources/application.properties
@@ -10,6 +10,7 @@ flyway.url=${ifsDatasourceUrl}
 flyway.user=${ifsDatasourceUsername}
 flyway.password=${ifsDatasourcePassword}
 flyway.locations=${ifsFlywayLocations}
+flyway.placeholders.ifs.system.user.uuid=${project.ext['flyway.placeholders.ifs.system.user.uuid']}
 
 server.session.cookie.secure=true
 server.session.cookie.http-only=false
