--- a/ifs-auth-service/build.gradle
+++ b/ifs-auth-service/build.gradle
@@ -29,6 +29,7 @@ subprojects {
     task tagDockerLocal(type: DockerTagImage) {
         dependsOn buildDocker
         imageId = buildDocker.getTag()
+        repository = "dummy"
         doFirst {
             repository = getLocalOCCredentials().url + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
         }
@@ -37,6 +38,7 @@ subprojects {
 
     task osStageLocal(type: DockerPushImage) {
         dependsOn tagDockerLocal
+        imageName = "dummy"
         doFirst {
             registryCredentials = getLocalOCCredentials()
             imageName = registryCredentials.url + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
