--- a/ifs-data-layer/build.gradle
+++ b/ifs-data-layer/build.gradle
@@ -97,6 +97,7 @@ subprojects {
         task tagDockerLocal(type: DockerTagImage) {
             dependsOn buildDocker
             imageId = buildDocker.getTag()
+            repository = "dummy"
             doFirst {
                 repository = getLocalOCCredentials().url + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
                 tag = project.version
@@ -105,6 +106,7 @@ subprojects {
 
         task osStageLocal(type: DockerPushImage) {
             dependsOn tagDockerLocal
+            imageName = "dummy"
             doFirst {
                 registryCredentials = getLocalOCCredentials()
                 imageName = registryCredentials.url + "/" + openshiftEnv + "/" + project.name.replaceAll(/ifs-/, "")
