--- a/os-files/31-data-service.yml
+++ b/os-files/31-data-service.yml
@@ -25,24 +25,24 @@ items:
         containers:
         - image: innovateuk/data-service:${dataServiceVersion}
           name: data-service
-#          livenessProbe:
-#            httpGet:
-#              path: /monitoring/health
-#              port: 8080
-#            initialDelaySeconds: 60
-#            periodSeconds: 31
-#            timeoutSeconds: 5
-#            successThreshold: 1
-#            failureThreshold: 3
-#          readinessProbe:
-#            httpGet:
-#              path: /monitoring/health
-#              port: 8080
-#            initialDelaySeconds: 40
-#            periodSeconds: 5
-#            timeoutSeconds: 5
-#            successThreshold: 1
-#            failureThreshold: 1
+          livenessProbe:
+            httpGet:
+              path: /monitoring/health
+              port: 8080
+            initialDelaySeconds: 60
+            periodSeconds: 31
+            timeoutSeconds: 5
+            successThreshold: 1
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /monitoring/health
+              port: 8080
+            initialDelaySeconds: 40
+            periodSeconds: 5
+            timeoutSeconds: 5
+            successThreshold: 1
+            failureThreshold: 1
           imagePullPolicy: Always
           env:
           - name: IFS_WEB_BASEURL
