IFS-2493 - Removed debug line and moved syncShib into ifs-data-service build.gradle file

--- a/ifs-data-layer/ifs-data-service/build.gradle
+++ b/ifs-data-layer/ifs-data-service/build.gradle
@@ -228,6 +228,10 @@ task generateMainMapperClasses(type: JavaCompile) {
     }
 }
 
+task syncShib(type:Exec) {
+    workingDir '../'
+    commandLine 'docker-compose', 'exec', '-T', 'ldap', '/usr/local/bin/ldap-sync-from-ifs-db.sh', 'mysql'
+}
 
 task initDB() {
     flywayMigrate.mustRunAfter flywayClean
