Putting in more stability for threading tests after failures found running from Gradle CLI.  Removed more TestPropertySource to speed up test suite

--- a/ifs-web-service/ifs-web-core/src/test/resources/application-integration-test.properties
+++ b/ifs-web-service/ifs-web-core/src/test/resources/application-integration-test.properties
@@ -1,11 +1,10 @@
-spring.sleuth.enabled=true
+spring.sleuth.enabled=false
 spring.zipkin.enabled=false
 
 ifs.web.security.csrf.encryption.password=a180fb6c-878a-4850-bccc-bd244f4c41c9
 ifs.web.security.csrf.encryption.salt=9ea751556a3feee7
 
 spring.profiles.active=integration-test
-
 
 ifs.data.service.rest.baseURL=
 
@@ -16,3 +15,5 @@ ifs.web.googleanalytics.trackingid=
 logout.url=
 
 ifsEnableDevTools=false
+
+ifs.web.ajp.connections.max.total=3
