wip for alternative cluster

--- a/gradle.properties
+++ b/gradle.properties
@@ -34,4 +34,4 @@ version=1.1.25-SNAPSHOT
 
 #ldap.version=1.1.23-LDAP-VERSION
 #sil-stub.version=1.1.23-SILSTUB-VERSION
-dockerRegistry=docker-registry-default.apps.prod.ifs-test-clusters.com
+dockerRegistry=docker-registry-default.apps.dev-nige-1.dev.ifs-test-clusters.com
