IFS-2493 - Renamed init sql file and removed privileges command

--- a/docker/ifs-mysql/Dockerfile
+++ b/docker/ifs-mysql/Dockerfile
@@ -8,4 +8,4 @@ RUN chmod 755 /usr/local/bin/docker-entrypoint.sh
 RUN chgrp -R 0 /var/run/mysqld/ && chmod -R g=u /var/run/mysqld/
 RUN chgrp -R 0 /var/lib/mysql && chmod -R g=u /var/lib/mysql
 
-COPY init.sql /docker-entrypoint-initdb.d
+COPY create_ifs_finance_db.sql /docker-entrypoint-initdb.d
