--- a/ifs-web-service/automated-build.gradle
+++ b/ifs-web-service/automated-build.gradle
@@ -1,8 +1,6 @@
 ext.ifsDataServiceRestBaseURL="http://localhost:8090"
-
 ext.ifsIdpLogoutUrl="https://ifs-local-dev/Logout/"
-
 ext.serverPort=""
 ext.activeProfile="environment"
-
 ext.ifsWebGoogleanalyticsTrackingid=""
+ext.ifsSystemUserUUID="c0d02979-e66e-11e7-ac43-0242ac120002"
