Adding missing property in integration test properties

--- a/ifs-data-layer/ifs-data-service/src/test/resources/application-integration-test.properties
+++ b/ifs-data-layer/ifs-data-service/src/test/resources/application-integration-test.properties
@@ -5,6 +5,7 @@ flyway.url=${testIfsDatasourceUrl}
 flyway.user=${testIfsDatasourceUsername}
 flyway.password=${testIfsDatasourcePassword}
 flyway.locations=db/migration,db/setup,db/integration
+flyway.placeholders.ifs.system.user.uuid=${project.ext['flyway.placeholders.ifs.system.user.uuid']}
 
 spring.datasource.url=${testIfsDatasourceUrl}
 spring.datasource.username=${testIfsDatasourceUsername}
