Added stdout logging to see test failure in Bamboo

--- a/ifs-web-service/ifs-web-core/build.gradle
+++ b/ifs-web-service/ifs-web-core/build.gradle
@@ -63,3 +63,11 @@ processTestResources {
         expand project.properties
     }
 }
+
+test {
+    testLogging {
+        showStandardStreams = true
+//        showExceptions
+//        showStackTraces
+    }
+}
