--- a/os-files/db-reset/66-dbreset.yml
+++ b/os-files/db-reset/66-dbreset.yml
@@ -17,6 +17,7 @@ items:
     name: flyway-config
   data:
     FLYWAY_LOCATIONS: "<<FLYWAY-LOCATIONS>>"
+    FLYWAY_PLACEHOLDERS_NAME: "<<FLYWAY-PLACEHOLDERS-NAME>>"
 - apiVersion: v1
   kind: ConfigMap
   metadata:
@@ -44,6 +45,7 @@ items:
         flyway.url=jdbc:mysql://${DB_HOST}:${DB_PORT}
         flyway.schemas=$DB_NAME
         flyway.locations=$FLYWAY_LOCATIONS
+        flyway.placeholders.$FLYWAY_PLACEHOLDERS_NAME
         flyway.user=$DB_USER
         flyway.password=$DB_PASS
         EOF
@@ -109,4 +111,9 @@ items:
           configMapKeyRef:
             name: flyway-config
             key: FLYWAY_LOCATIONS
+      - name: FLYWAY_PLACEHOLDERS_NAME
+          valueFrom:
+            configMapKeyRef:
+            name: flyway-config
+            key: $FLYWAY_PLACEHOLDERS_NAME
     restartPolicy: Never
