--- a/os-files/gluster/11-gluster-endpoints.yml
+++ b/os-files/gluster/11-gluster-endpoints.yml
@@ -3,7 +3,8 @@ kind: Endpoints
 metadata:
   name: glusterfs-cluster
 subsets:
-#Addresses for the old cluster
+# These addresses must be changed for individual environments
+#Addresses for the current cluster
   - addresses:
       - ip: 10.0.0.64
     ports:
@@ -13,15 +14,15 @@ subsets:
     ports:
       - port: 1
 #Addresses for the new cluster
-  - addresses:
-      - ip: 10.0.0.151
-    ports:
-      - port: 1
-  - addresses:
-      - ip: 10.0.0.168
-    ports:
-      - port: 1
-  - addresses:
-      - ip: 10.0.0.71
-    ports:
-      - port: 1
+#  - addresses:
+#      - ip: 10.0.0.151
+#    ports:
+#      - port: 1
+#  - addresses:
+#      - ip: 10.0.0.168
+#    ports:
+#      - port: 1
+#  - addresses:
+#      - ip: 10.0.0.71
+#    ports:
+#      - port: 1
