--- a/ifs-web-service/ifs-web-core/build.gradle
+++ b/ifs-web-service/ifs-web-core/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     testCompile "com.openpojo:openpojo:0.8.4"
     testCompile "org.skyscreamer:jsonassert:1.3.0"
     testCompile "net.sf.opencsv:opencsv:2.3"
-
+    testCompile group: 'com.jayway.awaitility', name: 'awaitility', version: '1.7.0'
 }
 
 // enabling Spring dev tools has security consequences so only do so for local development
