--- a/ifs-data-layer/ifs-data-service/src/test/resources/application-seeding-db.properties
+++ b/ifs-data-layer/ifs-data-service/src/test/resources/application-seeding-db.properties
@@ -4,6 +4,7 @@ flyway.url=jdbc:mysql://ifs-database:3306/ifs
 flyway.user=root
 flyway.password=password
 flyway.locations=db/migration,db/setup,db/webtestsupport
+flyway.placeholders.ifs.system.user.uuid=${project.ext['flyway.placeholders.ifs.system.user.uuid']}
 
 spring.datasource.url=jdbc:mysql://ifs-database:3306/ifs?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
