--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ ext.spVersion = project.properties['sp.version'] ?: project.version
 ext.idpVersion = project.properties['idp.version'] ?: project.version
 ext.ldapVersion = project.properties['ldap.version'] ?: project.version
 
+ext.mailSinkVersion = project.properties['mail-sink.version'] ?: project.version
+
 ext.silStubVersion = project.properties['sil-stub.version'] ?: project.version
 
 allprojects {
