--- a/gradle.properties
+++ b/gradle.properties
@@ -33,5 +33,6 @@ version=1.1.26-SNAPSHOT
 
 
 #ldap.version=1.1.23-LDAP-VERSION
-#sil-stub.version=1.1.23-SILSTUB-VERSION
+#sil-stub.version=1.1.23-SIL-STUB-VERSION
+#mail-sink.version=1.1.23-MAIL-SINK-VERSION
 dockerRegistry=docker-registry-default.apps.prod.ifs-test-clusters.com
