--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -89,7 +89,7 @@ services:
         - JAVA_OPTS=-Xmx300m
 
   mail:
-    image: innovateuk/mail-sink:latest
+    image: innovateuk/mail-sink
     ports:
       - "9876:8143"
       - "8765:8080"
