--- a/docker/ifs-mail-sink/000-default.conf
+++ b/docker/ifs-mail-sink/000-default.conf
@@ -1,20 +1,7 @@
-<VirtualHost _default_:8080>
+<VirtualHost _default_:*>
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html
 	ErrorLog /proc/self/fd/2
 	CustomLog /proc/self/fd/1 combined
   RedirectMatch ^/$ /cgi-bin/sqwebmail
-</VirtualHost>
-
-<VirtualHost _default_:443>
-	ServerAdmin webmaster@localhost
-	DocumentRoot /var/www/html
-	ErrorLog /proc/self/fd/2
-	CustomLog /proc/self/fd/1 combined
-  RedirectMatch ^/$ /cgi-bin/sqwebmail
-
-	SSLEngine on
-	SSLCertificateFile  /etc/apache2/ssl/example.crt
-  SSLCertificateKeyFile /etc/apache2/ssl/example.key
-
 </VirtualHost>
