adding fixes for openshift

--- a/openshift-support.gradle
+++ b/openshift-support.gradle
@@ -24,6 +24,10 @@ processResources {
     filesMatching("sil-stub/*.*") {
         expand project.properties
     }
+
+    filesMatching("mail/*.*") {
+        expand project.properties
+    }
 }
 
 task osDeployProduction(type:Exec) {
